[package]
name = "solana-balance-monitor"
version = "0.1.0"
authors = ["lalka2003", "https://t.me/chad_trade"]
repository = "https://github.com/vlad2030/solana-balance-monitor"
edition = "2021"

[dependencies]
tokio = {version = "1.40.0", features = ["full"]}
serde = {version = "1.0.210", features = ["derive"]}
serde_json = "1.0.128"
regex = "1.11.1"
chrono = {version = "0.4.38", features = ["serde"]}
reqwest = {version = "0.12.8", features = ["json"]}
crossterm = "0.28.1"
ratatui = "0.29.0"
solana-sdk = "2.1.0"
solana-client = "2.1.0"
solana-program = "2.1.0"

[profile.dev]
opt-level = 0
lto = "off"

[profile.release]
opt-level = 3
lto = "fat"
panic = "abort"
codegen-units = 1
